--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-share": "^12.1.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-simple-toast": "^3.3.2",
     "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
