--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
       android:allowBackup="false"
       android:usesCleartextTraffic="true"
       android:launchMode="singleTask"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:supportsRtl="true">
       <!-- Change the value to true to enable pop-up for in foreground on receiving remote notifications (for prevent duplicating while showing local notifications set this to false) -->
         <meta-data  android:name="com.dieam.reactnativepushnotification.notification_foreground"
                     android:value="false"/>
@@ -89,7 +90,8 @@
             <data android:scheme="naraakum-client" android:host="redirectClient" />
         </intent-filter>
       </activity>
-      <service android:name="io.invertase.firebase.messaging.ReactNativeFirebaseMessagingService">
+      <service android:name="io.invertase.firebase.messaging.ReactNativeFirebaseMessagingService"
+               android:exported="false">
         <intent-filter>
           <action android:name="com.google.firebase.MESSAGING_EVENT" />
         </intent-filter>
